fix(route) delete user
